--- a/Diary/Views/Posts/Index.cshtml
+++ b/Diary/Views/Posts/Index.cshtml
@@ -96,9 +96,6 @@
             <div class="row">
                 <div class="col-lg-6">
                     <ul class="list-unstyled">
-                        <li>
-                            @Html.ActionLink("All", "Index", null, new { @class = "btn btn-default col-md-12" })
-                        </li>
                         @{
                             int half = (ViewBag.Categories.Count / 2) + (ViewBag.Categories.Count % 2);
                             for (int i = 0; i < half; i++)
@@ -108,14 +105,14 @@
                                 </li>
                             }
                         }
+                        <li>
+                            @Html.ActionLink("All", "Index", null, new { @class = "btn btn-default col-md-12", style = "margin-top: 10px" })
+                        </li>
                     </ul>
                 </div>
                 <!-- /.col-lg-6 -->
                 <div class="col-lg-6">
                     <ul class="list-unstyled">
-                        <li>
-                            <div class="btn btn-default" style="visibility: hidden">&nbsp;</div>
-                        </li>
                         @for (int i = half; i < ViewBag.Categories.Count; i++)
                         {
                             <li>
