--- a/Diary/Views/Posts/Details.cshtml
+++ b/Diary/Views/Posts/Details.cshtml
@@ -26,7 +26,7 @@
         <hr>
         @if (!string.IsNullOrEmpty(Model.Body))
         {
-            <p>@Html.Raw(Model.Body.Replace(System.Environment.NewLine, "<br />"))</p>
+            <p>@Html.Raw(Model.HtmlView)</p>
         }
         @*<a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>*@
         <hr>
