Improved Hashtags, added Edit button on main screen

--- a/Diary/Views/HashTags/Index.cshtml
+++ b/Diary/Views/HashTags/Index.cshtml
@@ -9,10 +9,10 @@
 <table class="table">
     <tr>
         <th>
-            Hashtag
+            @Html.ActionLink("Hashtag", "Index", "Hashtags")
         </th>
         <th>
-            Count
+            @Html.ActionLink("Count", "Popular", "Hashtags")
         </th>
     </tr>
 
