Page Titles and b/i/u tags

--- a/Diary/Views/Categories/Delete.cshtml
+++ b/Diary/Views/Categories/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Diary.Models.Category
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.PageTitle = "Delete Category";
 }
 
 <h2>Delete</h2>
