--- a/Diary/Views/Categories/Details.cshtml
+++ b/Diary/Views/Categories/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Diary.Models.Category
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.PageTitle = "View Category";
 }
 
 <h2>Details</h2>
