--- a/Diary/Views/Categories/Index.cshtml
+++ b/Diary/Views/Categories/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Diary.Models.Category>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.PageTitle = "Categories";
 }
 
 <h2>Index</h2>
