--- a/Diary/Views/HashTags/Index.cshtml
+++ b/Diary/Views/HashTags/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Diary.Controllers.HashTagsController.HashTagCount>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.PageTitle = "Hashtags";
 }
 
 <h2>Hashtags</h2>
