--- a/Diary/Views/Posts/Edit.cshtml
+++ b/Diary/Views/Posts/Edit.cshtml
@@ -4,16 +4,16 @@
     ViewBag.PageTitle = "Edit Post";
 }
 
-<h2>Edit</h2>
+<h2>Edit Post</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Post</h4>
-        <hr />
+
+    <hr />
+
+    <div class="form-horizontal" style="width:75%; float:left">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
@@ -36,14 +36,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control", style = "height: 450px" } })
                 @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
+    </div>
+    <div>
+        <div>
             @Html.LabelFor(model => model.Categories, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-2">
                 @{
                     List<Diary.Controllers.AssignedCategoryData> categories = ViewBag.Categories;
                     foreach (var category in categories)
@@ -54,16 +55,18 @@
                 }
             </div>
         </div>
-
-        <div class="form-group">
+    </div>
+    <div>
+        <div class="form-group" style="clear:left">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
-}
+                    }
 
 <div>
+    <br />
     @Html.ActionLink("Back to List", "Index")
 </div>
 
